fix ui alignments

--- a/src/style.css
+++ b/src/style.css
@@ -107,8 +107,6 @@ input:checked + .slider:before {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 #locationInput {
